Tweaked scramble area sizing and solve card text size on mobile.

--- a/app/static/less/common.less
+++ b/app/static/less/common.less
@@ -46,7 +46,7 @@ html,body {
     justify-content: center!important;
 }
 
-#return-to-events, #summary-buttons, #times-submit {
+#summary-buttons, #times-submit {
     position: fixed;
     bottom: 20px;
     right: 20px;
