--- a/app/static/less/timer_page.less
+++ b/app/static/less/timer_page.less
@@ -22,12 +22,12 @@
     height: ~"calc(20% - 56px)";
     font-size: 24px;
     @media @mobile {
-        font-size: 16px;
-        height: ~"calc(25% - 56px)";
+        font-size: 14px;
+        height: ~"calc(30% - 56px)";
     }
     @media @tablet {
         font-size: 16px;
-        height: ~"calc(25% - 56px)";
+        height: ~"calc(30% - 56px)";
     }
 
     background-color: #FCFCFC;
@@ -60,12 +60,12 @@
 
     overflow-y: scroll;
 
-    height: 80%;
+    height: 75%;
     @media @tablet {
-        height: 30%;
+        height: 35%;
     }
     @media @mobile {
-        height: 30%;
+        height: 35%;
     }
 
     .single-time {
@@ -118,11 +118,17 @@
         .value-wrapper {
             margin-left: 15px;
             font-size: 22px;
+            @media @mobile {
+                font-size: 18px;
+            }
         }
 
         .time-value {
             margin-left: 15px;
             font-size: 20px;
+            @media @mobile {
+                font-size: 18px;
+            }
         }
 
         &.fmc {
@@ -133,6 +139,9 @@
                 padding: 0px 5px;
                 margin-right: 15px;
                 height: 32px;
+                @media @mobile {
+                    font-size: 16px;
+                }
             }
         }
     }
@@ -147,12 +156,12 @@
 
     width: 100%;
 
-    height: 80%;
+    height: 75%;
     @media @tablet {
-        height: 45%;
+        height: 35%;
     }
     @media @mobile {
-        height: 45%;
+        height: 35%;
     }
 
     .timer-element {
